resources/assets/sass/components/_header.scss
.nav-bar {
	z-index: 1000;
	display: block;
	margin: 0px;
	background-image: url(#{$IMAGES-PATH}header_swirl.svg);
	background-repeat: no-repeat;
	background-position: top left;
	background-size: cover;
	height: 210px;
	&__inner {
		max-width: 1200px;
		margin: 0px auto;
		display: flex;
		justify-content: flex-end;
		flex-direction: row;
		@include screen-min-md {
			justify-content: center;
		}
	}
	&__logo{
		margin-top: 25px;
		display: block;
		flex: 1 0 auto;
		@include screen-px(1330){
			flex: 0 0 auto;
		}
		@include screen-px (600) {
			margin-top: 50px;
			img {
				width: 240px;
			}
		}
		& img {
			display: block;
			margin: 0px auto;
		}

	}
	&__right {
		flex: 0 0 auto;
	}
	&__guide {
		display: flex;
		flex-direction: row;
		justify-content: flex-end;
		align-content: center;
		position: relative;
		margin-right: 40px;
		&--news {
			text-transform: uppercase;
			margin: 0px 15px;
			padding-top: 0px;
			display: inline-block;
			align-self: center;
			&:link, &:visited {
				color: $purple;
				font-weight: 700;
			}
			&:hover, &:active, &:focus {
				color: $teal;
			}
		}
		&--search {
			align-self: center;
			position: relative;
			img {
				height: 24px;
				width: 24px;
				display: inline-block;
				position: absolute;
				top: 50%;
				transform: translateY(-50%);
				transition: transform .25s ease-in-out;	
				&:hover, &:focus {
					transform: scale(1.13) translateY(-10px);
					transition: transform .15s ease-in-out;	
				}
			}
			form {
				display: inline-block;
			}
			input {
				visibility: hidden;
				width: 0;
				opacity: 0;
				font-size: 1em;
				padding: 5px 5px 5px 5px;
				border: none;
				border-bottom: 1px solid $purple;
				$color: $purple;
				background: $white;
				transition: all .9s ease;
				&:focus {
					outline: none;
				}
				&::placeholder {
					color: $mid-grey;
				}
			}
			.toggle-search {
				visibility: visible;
				opacity: 1;
				width: 200px;
				transition: all .6s cubic-bezier(0.11, 1.07, 1, 1);
				margin-right: 10px;
			}
		}	
		
		a { text-decoration: none !important; }
	}
	ul.menu {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: baseline;
		flex-wrap: nowrap;
		height: auto;
		margin-top: 20px;
		@include screen-px(1100){
			padding-left: 0px;
		}
	}
}
.nav-menu {
	ul.menu {
		a:link, a:visited{
			text-decoration: none;
			color: $teal;
		}
		a:hover, a:focus{
			font-family: $header-font;
		}
		li {
			position: relative;
			backface-visibility: hidden;
			&:hover, &:focus {
				font-weight: 700;
				color: $teal;
			}
			&:hover > ul, , &:focus > ul {
				max-height: 500px;
				z-index: 10000;
				opacity: 1;
				transform: translateY(20px) scaleY(1);
				color: $teal;
				overflow: visible;
				visibility:visible;
				backface-visibility: visible;
				transition: max-height .5s cubic-bezier(0.57, 0.04, 0.46, 0.9),
					opacity .4s,
					transform .5s,
					color .4s;
			}
		}
		ul.sub-menu {
			display: block;
			visibility:hidden;
			transform: translateY(0) scaleY(.9);
			max-height: 0px;
			overflow: hidden;
			transition: opacity .9s;
			opacity: 0;
			position: absolute;
			top: 1em;
			z-index: 99999;
			width: 200px;
			box-shadow: 0px 3px 3px rgba($shadow, .2);
			li.menu-item{
				font-family: $body-font;
				padding: 0px;
				background: $transparent-lime;
				a:link, a:visited {
					z-index: 10000;
					padding: 20px 20px 20px 20px;
					font-weight: 300;
				}
				a:hover, a:active, a:focus {
					background: $teal;
					transition: background-color .6s ease;
					color: $white;
					font-weight: 300;
				}
				&::after {
					content: "";
					display: block;
					height:1px;
					width: 220px;
					margin: 0px 0px 0px -10px;
					background-color: $teal;
					font-family: $body-font;
				}
				&:last-child::after {
					display: none;
				}
			}
		}
	}
}
@include screen-px(1435){
	.menu li:last-child > ul.sub-menu{
		right: 0px;
	}
}
.menu-item {
	padding: 0px 14px;
	& a:link, & a:visited {
		display: block;
		padding: 10px 0px 10px;
		color: $teal;
		text-transform: uppercase;
	}
}
@include screen-min-md {
	.nav-bar {
		background-image: url(#{$IMAGES-PATH}mobile_header_swirl.svg);
		background-size: 100% 240px;
		background-position: top left;
		height: 239px;
	}
	.nav-menu {
		display: none;
	}
	.nav-bar__guide {
		display: none;
	}

}
.mobile-nav__logo {
	text-align: center;
	width: 300px;
	max-width: calc(100vw - 80px);
	margin: 0px auto;
	display: block;
}
#menuToggle {
   display: none;
   position: absolute;
   top: 4px;
   right: 40px;
   
   z-index: 1;
   
   -webkit-user-select: none;
   user-select: none;
   @include screen-min-md {
	   display: block;
   }
   @include screen-sm {
	   top: 20px;
   }
   a {
	text-decoration: none;
	color: $teal !important;
	transition: color 0.3s ease;
	&:hover, &:focus {
		color: $lime;
		font-weight: 700;	 
	}
  }
	input {
		display: block;
		width: 48px;
		height: 38px;
		position: absolute;
		top: -7px;
		left: -5px;

		cursor: pointer;

		opacity: 0; /* hide this */
		z-index: 2; /* and place it over the hamburger */

		-webkit-touch-callout: none;
	}
}
  
 #menuToggle span
 {
   display: block;
   width: 48px;
   height: 2px;
   margin-bottom: 11px;
   position: relative;
   
   background: $purple;
   border-radius: 0px;
   
   z-index: 1;
   
   transform-origin: 5px 0px;
   
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
			   background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
			   opacity 0.55s ease;
 }
 
 #menuToggle span:first-child
 {
   transform-origin: 0% 0%;
 }
 
 #menuToggle span:nth-last-child(2)
 {
   transform-origin: 0% 100%;
 }
 
 /* 
  * Transform all the slices of hamburger
  * into a crossmark.
  */
 #menuToggle input:checked ~ span
 {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
   background: $teal;
 }
 
 /*
  * But let's hide the middle one.
  */
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
 /*
  * Ohyeah and the last one should go the other direction
  */
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
 /*
  * Make this absolute positioned
  * at the top left of the screen
  */
 #menu
 {
   position: absolute;
   width: 100vw;
   min-height: 110vh;
   overflow-y: scroll;
   overflow-x: hidden;
   max-height: 110vh;
   -webkit-overflow-scrolling: touch;
   height: auto;
   right: -40px;
   margin: -150px 0px 0 0px;
   padding: 100px 20px 100px;
   background: $white;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
   
   transform-origin: 0% 0%;
   transform: translatex(100%);
   
   transition: transform 0.7s cubic-bezier(0.77,0.2,0.05,1.0);
   ul {
	   transition: max-height .6s ease;
   }
   & li:last-child {
	   right: 5px;
	   border: none;
   }
 }
 
 #menu a
 {
	display: block;
   padding: 40px 0 20px;
   font-size: 22px;
   line-height: 1.2;
   text-align: left;
	position: relative;
 }
 #menu li{
   border-bottom: 1px solid $lime;
   .sub-menu {
	   margin-left: 30px;
	   max-height: 0px;
	   overflow: hidden;
   }
 }
 /*
  * And let's slide it in from the left
  */
 #menuToggle input:checked ~ nav
 {
   transform: none;
 }
 .toggle-icon {
	 position: absolute;
	 right: 0px;
	 top: 60%;
	 transform: translateY(-50%);
	 background: url(#{$IMAGES-PATH}plus.svg);
	 background-size: cover;
	 height: 20px;
	 width: 20px;
	 background-repeat: no-repeat;
 }
 .toggle-icon:not(.toggle-icon__plus) {
	 background: url(#{$IMAGES-PATH}minus.svg) no-repeat;
	float: right;
	position: absolute;
	background-size: 100% auto;
	right: 0px;
	top: 60%;
	transform: translateY(-50%);
	height: 20px;
	width: 20px;
	margin-top: 7px;
    margin-right: -3px;
	transition: transform .6s ease;
}

 #menu .expand ~ ul {
	 max-height: 100vh;
	 transition: max-height .9s cubic-bezier(0.57, 0.04, 0.46, 0.9);
 }
 #menu .sub-menu li {
	 border-bottom: none;
	 border-top: 1px solid $lime;
	 .toggle-icon {
		 display: none;
	 }
 }
 .no-scroll {
	 overflow: hidden;
 }


 .btn {
	font-family: $header-font;
	font-weight: 300;
	text-transform: uppercase;
	text-decoration: none;
	cursor: pointer;
	border: none;
	&:hover, &:visited {
		transform: scale(1.01);
		transition: .2s all;
		text-decoration: none;
	}
	&:active, &:focus{
		transition: .2s all;
	}
	&--teal {
		background-color: $teal;
		&:hover, &:visited {
			box-shadow: 2px 2px 3px rgba($shadow, .20);
			background-color: $light-teal;
		}
	}
	&--purple {
		background-color: $purple;
		color: $blue;
		&:hover, &:visited {
			box-shadow: 2px 2px 3px rgba($shadow, .20);
			background-color: $light-purple;
		}
	}
}
.covid-banner__btn:link, .covid-banner__btn:visited {
	display: inline-block;
	color: $white;
	padding: 5px 28px;
	font-weight: 700;
}
.nav-bar__btn:link, .nav-bar__btn:visited{
	display: inline-block;
	border: none;
	padding: 20px 20px 20px 20px;
	color: $blue;
	font-weight: 700;
	
	&:hover {
		background-color: darken($purple, 5%);
	}
}

